added Infrastructure, repository and service

--- a/BookFlow/appsettings.json
+++ b/BookFlow/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionString": "server=DESKTOP-B6ESLRS;integrated security=True; database=BookFlowDb;TrustServerCertificate=true;",
   "AllowedHosts": "*"
 }
